--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,9 @@ jobs:
           node-version: '16.x'
       - name: Build web-app
         run: |
-          npm ci
+          npm install
           npm run build
+          cp -a dist/. public/
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
